@startuml domain

class Game {
  - score: int
}

class Round {
  - roundNumber: int
  - attempts: int
}

class Word {
  - value: String
  - length: int
}

class Feedback {
  - guess: String
}

enum Mark {
  CORRECT
  PRESENT
  ABSENT
  INVALID
}

Game "1" -- "1..*" Round : has
Round "1..*" -- "1" Word
Round "1..*" -- "1" Feedback
Feedback -- "*" Mark : hints per letter of attempt

@enduml
